--- a/app/index.css
+++ b/app/index.css
@@ -20,6 +20,50 @@ a {
   margin: 0 auto;
 }
 
+.button {
+  color: #e6e6e6;
+  background: #0a0a0a;
+  border: none;
+  font-size: 16px;
+  border-radius: 3px;
+  width: 200px;
+  text-align: center;
+  display: block;
+  padding: 7px 0;
+  margin: 10px auto;
+}
+
+.button:hover:enabled {
+  background: linear-gradient(#1a1a1a, #0a0a0a);
+  color: #fff;
+  text-decoration: none;
+}
+
+.button:active {
+  transform: translateY(1px);
+}
+
+/* Nav */
+.nav {
+  display: flex;
+}
+
+.nav li {
+  margin-right: 15px;
+}
+
+.active {
+  font-weight: bold;
+}
+
+/* Home */
+.home-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+/* Popular */
 .languages {
   display: flex;
   justify-content: center;
@@ -56,15 +100,4 @@ a {
   border-radius: 50%;
 }
 
-/* Nav */
-.nav {
-  display: flex;
-}
-
-.nav li {
-  margin-right: 15px;
-}
-
-.active {
-  font-weight: bold;
-}
+/* Battle */
