--- a/app/index.css
+++ b/app/index.css
@@ -134,3 +134,15 @@ a {
 }
 
 /* Battle */
+.reset {
+  border: none;
+  background: transparent;
+  color: #549999;
+  display: block;
+  width: 100%;
+  text-align: center;
+}
+
+.reset:hover {
+  cursor: pointer;
+}
